GearsetPOC/force-app/main/default/objects/Loyalty_Buttons_Access_Setting__mdt/Loyalty_Buttons_Access_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Loyalty Buttons Access Setting</label>
    <pluralLabel>Loyalty Buttons Access Settings</pluralLabel>
</CustomObject>