GearsetPOC/force-app/main/default/objects/Loyalty_Buttons_Access_Setting__mdt/fields/All__c.field-meta.xml
<CustomField>
    <fullName>All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All</label>
    <type>Checkbox</type>
</CustomField>