GearsetPOC/force-app/main/default/objects/Loyalty_Buttons_Access_Setting__mdt/fields/Loyalty_Team_Top_tier__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Team_Top_tier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty Team - Top tier</label>
    <type>Checkbox</type>
</CustomField>